import type { ColumnDefinitions, MigrationBuilder } from 'node-pg-migrate';

/* Esto es para poder definir "atajos" de tipos de columna reutilizables entre
 migraciones (como un tipo "id" que siempre sea igual). No se utiliza aquí, así
 que queda undefined — lo exige la firma que espera node-pg-migrate.*/
export const shorthands: ColumnDefinitions | undefined = undefined;

export async function up(pgm: MigrationBuilder): Promise<void> {
    pgm.createTable('users', {
        // MySQL: `id INT AUTO_INCREMENT PRIMARY KEY`
        // En Postgres moderno se usa IDENTITY en vez del "serial" viejo.
        // "GENERATED ALWAYS AS IDENTITY" significa que "Postgres siempre asigna el valor, y nunca
        // se puede insertar uno manual" (a diferencia de GENERATED BY DEFAULT,
        // que sí lo permitiría). Es el equivalente moderno y más estricto de AUTO_INCREMENT.
        id: 'bigint GENERATED ALWAYS AS IDENTITY PRIMARY KEY',
    
        // MySQL no tiene tipo UUID nativo (usualmente se guarda como CHAR(36) o BINARY(16)).
        // Postgres sí tiene un tipo `uuid` nativo: ocupa 16 bytes fijos y valida formato
        // automáticamente. Este es el public_id (UUID v7), generado en NestJS, no en la BD.
        public_id: { type: 'uuid', notNull: true, unique: true },
    
        // notNull: true  ==  NOT NULL en MySQL, es igual.
        // unique: true   ==  UNIQUE, también igual — Postgres crea un índice único
        // implícito automáticamente, igual que MySQL.
        email: { type: 'varchar(255)', notNull: true, unique: true },
    
        password_hash: { type: 'varchar(255)', notNull: true }, // TODO: validar las reglas para este hash
        name: { type: 'varchar(100)', notNull: true },
    
        // MySQL: `DATETIME` o `TIMESTAMP` (este último con manejo raro de zona horaria).
        // Postgres: `timestamptz` (timestamp with time zone) SIEMPRE guarda en UTC
        // internamente y convierte según la zona del cliente al leer. Es la opción
        // recomendada casi siempre — pues evita los problemas al suponer en qué zona horario
        // se está; problema que sí existe en MySQL con TIMESTAMP/DATETIME.
        // pgm.func('now()') le dice a node-pg-migrate "esto es una función SQL, no un
        // valor literal" — así genera `DEFAULT now()` y no `DEFAULT 'now()'` (que sería
        // un string literal, y fallaría). now() es el equivalente a NOW() de MySQL.
        created_at: { type: 'timestamptz', notNull: true, default: pgm.func('now()') },
        // Este campo 'updated_at', cuando se actualice realmente un campo, debe asignarse
        // en código, ya que Postgres no lo maneja automáticamente en un update
        updated_at: { type: 'timestamptz', notNull: true, default: pgm.func('now()') },
      });
}

export async function down(pgm: MigrationBuilder): Promise<void> {
    // Borrar la tabla completa.
    pgm.dropTable('users');
}
