Table users {
  id bigint [pk, increment]
  public_id uuid [unique, not null]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  name varchar(100) [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table profiles {
  user_id bigint [pk, ref: - users.id]
  birth_date date
  height_cm decimal(5,2)
  biological_sex varchar(6) [note: 'CHECK: male, female']
  activity_level varchar(20) [note: 'CHECK: sedentary, light, moderate, active, very_active']
  updated_at timestamptz [not null, default: `now()`]
}

Table weight_entries {
  id bigint [pk, increment]
  public_id uuid [unique, not null]
  user_id bigint [not null, ref: > users.id]
  entry_date date [not null]
  weight_kg decimal(5,2) [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, entry_date) [unique]
  }
}

Table body_measurements {
  id bigint [pk, increment]
  public_id uuid [unique, not null]
  user_id bigint [not null, ref: > users.id]
  entry_date date [not null]
  arm_cm decimal(5,2)
  waist_cm decimal(5,2)
  hip_cm decimal(5,2)
  chest_cm decimal(5,2)
  thigh_cm decimal(5,2)
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, entry_date) [unique]
  }
}

Table skinfold_measurements {
  id bigint [pk, increment]
  public_id uuid [unique, not null]
  user_id bigint [not null, ref: > users.id]
  entry_date date [not null]
  chest_mm decimal(4,1)
  abdominal_mm decimal(4,1)
  thigh_mm decimal(4,1)
  triceps_mm decimal(4,1)
  suprailiac_mm decimal(4,1)
  subscapular_mm decimal(4,1)
  midaxillary_mm decimal(4,1)
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, entry_date) [unique]
  }
}

Table refresh_tokens {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  token_hash varchar(255) [not null]
  expires_at timestamptz [not null]
  revoked_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, token_hash) [unique]
    
  }
}
